Fix remaining IDE deprecation warnings